# IRE

./: .gitignore  README.md  main.py  pyproject.toml  test_imports.py
checkpoints/yolo26-n/: args.yaml  results.csv
checkpoints/yolov12-n/: args.yaml  results.csv
docs/: architecture.md  pipeline.md
runs/detect/checkpoints/yolo26-n/: args.yaml
src/: __init__.py
src/cli/: evaluate.sh  gui.sh  infer.sh  pipeline.sh  train.sh
src/core/: __init__.py
src/core/data/: __init__.py  augmentation.py  dataset.py
src/core/models/: __init__.py  base.py  registry.py
src/core/models/configs/: yolo26.yaml  yolov12.yaml
src/core/models/yolo26/: __init__.py  model.py
src/core/models/yolov12/: __init__.py  model.py
src/gui/: __init__.py  app.py
src/utils/: __init__.py  checkpoint.py  logger.py  resource.py  visualization.py
start/: download_data.py
